# Image-api-connector

./: CHANGELOG.md  CONTRIBUTING.md  FINAL_FR.md  INDEX.md  LICENSE  PRESENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_FR.md  TESTING.md  __init__.py  api_connector.py  example_workflow.json  pyproject.toml  quick_test.py  verify.py
